gitops/file-uploader/base/manifest.yaml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: file-uploader
  name: file-uploader
spec:
  replicas: 3
  selector:
    app: file-uploader
    deploymentconfig: file-uploader
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: file-uploader
        deploymentconfig: file-uploader
    spec:
      containers:
      - image: ""
        imagePullPolicy: Always
        name: file-uploader
        ports:
        - containerPort: 8443
          protocol: TCP
        - containerPort: 8080
          protocol: TCP
        volumeMounts:
        - mountPath: "/opt/app-root/src/uploaded"
          name: file-uploader-vol
      volumes:
      - name: file-uploader-vol
        persistentVolumeClaim:
          claimName: file-uploader-vol-claim
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - file-uploader
      from:
        kind: ImageStreamTag
        name: file-uploader:latest
        namespace: file-uploader
    type: ImageChange
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: file-uploader
  name: file-uploader
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    app: file-uploader
    deploymentconfig: file-uploader
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: file-uploader
  name: file-uploader
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: file-uploader
    weight: 100
  wildcardPolicy: None
